--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
             </div>
-            <div class="content-container">
+            <div class="content-container2">
                 <div class="image-container">
                     <img src="./photo2.png" alt="myphoto">
                 </div>
@@ -115,7 +115,10 @@
                 <span>Save this information for next time</span>
             </div>
         </div>
-        <button>Continue</button>
+        <button class="btn">Continue</button>
+    </div>
+    <div class="footer">
+        <small>created by <a href="https://devchallenges.io/portfolio/Mr-hollowman"><b>Mr-hollowman</b></a>- devChallenges.io</small>
     </div>
 </div>
 </body>
